--- a/data/unknown.json
+++ b/data/unknown.json
@@ -20,6 +20,12 @@
             "link": "https://youtu.be/Duyzy6kVUCQ",
             "percent": 100,
             "hz": 288
+        },
+        {
+            "user": "Andrxw",
+            "link": "https://www.youtube.com/watch?v=AroZCBYN29c",
+            "percent": 100,
+            "hz": 144
         }
     ]
 }
