--- a/data/unknown.json
+++ b/data/unknown.json
@@ -2,19 +2,14 @@
     "id": 84563802,
     "name": "Shitty Unknown",
     "author": "SarcasticMuch",
-    "creators": ["SarcasticMuch"],
-    "verifier": "KylashTheKiller",
-    "verification": "https://youtu.be/1O-mPiB4d-A",
+    "creators": [
+    ],
+    "verifier": "Dandy Chiggins",
+    "verification": "https://youtu.be/xxVMqmhe6tg",
     "showcase": "https://youtu.be/ObIJBphSSdY",
     "percentToQualify": 65,
     "password": "Free to Copy",
     "records": [
-        {
-            "user": "Dandy Chiggins",
-            "link": "https://youtu.be/xxVMqmhe6tg",
-            "percent": 100,
-            "hz": 360
-        },
         {
             "user": "vKaii",
             "link": "https://youtu.be/Duyzy6kVUCQ",
