--- a/data/unknown.json
+++ b/data/unknown.json
@@ -21,6 +21,12 @@
             "link": "https://www.youtube.com/watch?v=AroZCBYN29c",
             "percent": 100,
             "hz": 144
+        },
+        {
+            "user": "zepynr",
+            "link": "https://www.youtube.com/watch?v=m4Tbv2WtpM0",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
