--- a/data/unknown.json
+++ b/data/unknown.json
@@ -27,6 +27,12 @@
             "link": "https://www.youtube.com/watch?v=m4Tbv2WtpM0",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "Normus",
+            "link": "https://youtu.be/jrMk_Qh4sP4",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
