--- a/data/unknown.json
+++ b/data/unknown.json
@@ -33,6 +33,12 @@
             "link": "https://youtu.be/jrMk_Qh4sP4",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "BarbequeSauce",
+            "link": "https://youtu.be/HQXH61M0nAA",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
