--- a/data/unknown.json
+++ b/data/unknown.json
@@ -45,6 +45,12 @@
             "link": "https://youtu.be/HQXH61M0nAA",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "ZerniasX",
+            "link": "https://youtu.be/bzlI-OiLhXo",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
