--- a/data/unknown.json
+++ b/data/unknown.json
@@ -51,6 +51,12 @@
             "link": "https://youtu.be/bzlI-OiLhXo",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "FullyDiverse",
+            "link": "https://youtu.be/rVSx4jPaeWw",
+            "percent": 100,
+            "hz" 321
         }
     ]
 }
