--- a/data/unknown.json
+++ b/data/unknown.json
@@ -57,6 +57,12 @@
             "link": "https://youtu.be/rVSx4jPaeWw",
             "percent": 100,
             "hz": 321
+        },
+        {
+            "user": "lucap123",
+            "link": "https://www.youtube.com/watch?v=rromXptXSAw",
+            "percent": 96,
+            "hz": 144
         }
     ]
 }
