--- a/data/unknown.json
+++ b/data/unknown.json
@@ -60,8 +60,8 @@
         },
         {
             "user": "lucap123",
-            "link": "https://www.youtube.com/watch?v=rromXptXSAw",
-            "percent": 96,
+            "link": "https://www.youtube.com/watch?v=fmXAqe8Z4eY",
+            "percent": 100,
             "hz": 144
         }
     ]
