--- a/data/unknown.json
+++ b/data/unknown.json
@@ -63,6 +63,12 @@
             "link": "https://www.youtube.com/watch?v=fmXAqe8Z4eY",
             "percent": 100,
             "hz": 144
+        },
+        {
+            "user": "QuarTez",
+            "link": "https://www.youtube.com/watch?v=_asUw6tBTaI",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
