--- a/data/unknown.json
+++ b/data/unknown.json
@@ -69,6 +69,12 @@
             "link": "https://www.youtube.com/watch?v=_asUw6tBTaI",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "Morgenshtern",
+            "link": "https://youtu.be/a9M5d4pRxPM",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
