--- a/data/unknown.json
+++ b/data/unknown.json
@@ -1,6 +1,6 @@
 {
     "id": 86525030,
-    "name": "Shitty unknown",
+    "name": "Shitty UNKNOWN",
     "author": "SarcasticMuch",
     "creators": [
     ],
