--- a/data/unknown.json
+++ b/data/unknown.json
@@ -75,6 +75,12 @@
             "link": "https://youtu.be/a9M5d4pRxPM",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "zrK",
+            "link": "https://www.youtube.com/watch?v=j-KR0I-Wtpg",
+            "percent": 100,
+            "hz": 290
         }
     ]
 }
