--- a/data/unknown.json
+++ b/data/unknown.json
@@ -81,6 +81,12 @@
             "link": "https://www.youtube.com/watch?v=j-KR0I-Wtpg",
             "percent": 100,
             "hz": 290
+        },
+        {
+            "user": "mist3red",
+            "link": "https://youtu.be/bQRfSyiWr5E",
+            "percent": 100,
+            "hz": 225
         }
     ]
 }
