--- a/data/unknown.json
+++ b/data/unknown.json
@@ -87,6 +87,12 @@
             "link": "https://youtu.be/bQRfSyiWr5E",
             "percent": 100,
             "hz": 225
+        },
+        {
+            "user": "bull2k",
+            "link": "https://youtu.be/a23xtlh8m7U",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
