--- a/data/unknown.json
+++ b/data/unknown.json
@@ -93,6 +93,12 @@
             "link": "https://youtu.be/a23xtlh8m7U",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "GUISDAS",
+            "link": "https://youtu.be/W9Q_UUclWRg",
+            "percent": 100,
+            "hz": 165
         }
     ]
 }
