--- a/data/unknown.json
+++ b/data/unknown.json
@@ -105,6 +105,13 @@
             "link": "https://www.youtube.com/watch?v=bvtRIHUCNxE",
             "percent": 70,
             "hz": 144
+        },
+        {
+            "user": "IPlayGD",
+            "link": "https://www.youtube.com/watch?v=W6F_1jneM3c",
+            "percent": 100,
+            "hz": 360
         }
+        
     ]
 }
