--- a/data/unknown.json
+++ b/data/unknown.json
@@ -117,6 +117,12 @@
             "link": "https://youtu.be/8xsDq1GDA1c",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "Peace",
+            "link": "https://youtu.be/fzWXVBIKQbc",
+            "percent": 100,
+            "hz": 244
         }
         
         
