--- a/data/unknown.json
+++ b/data/unknown.json
@@ -53,7 +53,7 @@
             "hz": 360
         },
         {
-            "user": "FullyDiverse",
+            "user": "Diverse",
             "link": "https://youtu.be/rVSx4jPaeWw",
             "percent": 100,
             "hz": 321
