--- a/data/unknown.json
+++ b/data/unknown.json
@@ -165,6 +165,13 @@
             "link": "https://youtu.be/K2GmlLyer5M",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "Nutbasta",
+            "link": "https://youtu.be/W7-xaeZU71Y",
+            "percent": 100,
+            "hz": 244
         }
+            
     ]
 }
