--- a/data/unknown.json
+++ b/data/unknown.json
@@ -177,6 +177,12 @@
             "link": "https://www.youtube.com/watch?v=aVNt5bq3SZY",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "SemiRed",
+            "link": "https://www.youtube.com/watch?v=j8AK5Zd9G7g",
+            "percent": 100,
+            "hz": 144
         }
             
     ]
