--- a/data/unknown.json
+++ b/data/unknown.json
@@ -189,7 +189,14 @@
             "link": "https://youtu.be/29DexjsRKgw",
             "percent": 100,
             "hz": 240
+        },
+        {
+            "user": "F34R_NINJ4",
+            "link": "https://www.youtube.com/watch?v=kWfpHqmJTc4",
+            "percent": 100,
+            "hz": 360
         }
+    
             
     ]
 }
