--- a/data/unknown.json
+++ b/data/unknown.json
@@ -195,6 +195,12 @@
             "link": "https://www.youtube.com/watch?v=kWfpHqmJTc4",
             "percent": 100,
             "hz": 360
+        },
+        {
+            "user": "lonifer",
+            "link": "https://youtu.be/YdQSZF-Q3Zc",
+            "percent": 100,
+            "hz": 360
         }
     
             
